k3s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tone-coffee
  namespace: default

spec:
  replicas: 1

  selector:
    matchLabels:
      app: tone-coffee

  template:
    metadata:
      labels:
        app: tone-coffee

    spec:
      imagePullSecrets:
        - name: ghcr-secret

      containers:
        - name: app

          image: ghcr.io/wanxsky/tone-coffee:33c2ce6
          imagePullPolicy: Always

          ports:
            - containerPort: 8000

          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"

            limits:
              memory: "512Mi"
              cpu: "500m"

          readinessProbe:
            httpGet:
              path: /
              port: 8000

            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 8000

            initialDelaySeconds: 15
            periodSeconds: 20
