k3s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tone-coffee
  namespace: default

spec:
  selector:
    app: tone-coffee

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
